style.css
/* ... */
.entry-content .search-form {
	width: 50%;
}

.entry-meta {
	clear: both;
	color: #999;
	font-size: 12px;
	font-size: 1.2rem;
	font-family: 'PT Sans', sans-serif;
}

.entry-meta a {
	border-bottom: 1px solid #ddd;
	font-weight: 700;
}

.entry-footer .entry-meta {
	border-top: 2px solid #f5f5f5;
	margin: 0;
	padding: 20px 0;
	padding: 2rem 0;
}

.entry-comments-link::before {
	margin: 0 6px 0 2px;
	margin: 0 0.6rem 0 0.2rem;
}

.entry-categories,
.entry-tags {
	display: block;
}

/* Post Icons
------------------------------------------------------------ */

.entry-meta .entry-categories {
	background: url(images/folder.png) no-repeat top left;
	padding-left: 20px;
	padding-left: 2rem;
}

.entry-meta .entry-tags {
	background: url(images/tag.png) no-repeat top left;
	margin-top: 10px;
	margin-top: 1rem;
	padding-left: 20px;
	padding-left: 2rem;
}
	
.entry-meta .entry-comments-link {
	background: url(images/comments.png) no-repeat center left;
	float: right;
	padding-left: 20px;
	padding-left: 2rem;
}

.entry-meta .entry-time {
	background: url(images/time.png) no-repeat center left;
	padding-left: 20px;
	padding-left: 2rem;
}


/* Pagination
--------------------------------------------- */

.archive-pagination,
.entry-pagination {
	font-size: 14px;
	font-size: 1.4rem;
	margin: 40px 0;
	margin: 4rem 0;
}

.archive-pagination li {
	display: inline;
}

.archive-pagination li a {
	background-color: #333;
	border-radius: 3px;
	color: #fff;
	cursor: pointer;
	display: inline-block;
	padding: 8px 12px;
	padding: 0.8rem 1.2rem;
}

.archive-pagination li a:hover,
.archive-pagination li.active a {
	background-color: #ba1a00;
}

.entry-pagination a {
	border-bottom: 1px solid #ddd;
}

.breadcrumb {
	color: #333;
	font-size: 12px;
	font-size: 1.2rem;
	margin: 0 0 30px;
	margin: 0 0 3rem;
	padding: 10px 15px;
	padding: 1rem 1.5rem;
	border-bottom: 1px solid #eee;
	background-color: #f5f5f5;
}

.breadcrumb a {
	color: #333;
}

.breadcrumb a:after {
	  content: '\276f \276f';
    padding: 0 10px;
}

.breadcrumb .home {
	margin: 0 5px 0 0;
	margin: 0 0.5rem 0 0;
}

.entry .pagination {
	border-top: 2px solid #eee;
}

.entry .pagination-previous:before {
	content: 'PREV STORY';
	text-align: center;
	width: 100%;
	font-size: 12px;
	font-size: 1.2rem;
	display: block;
	color: #999;
	padding-bottom: 10px;
}

.entry .pagination-previous {
	padding: 10px 5px 10px 10px;
	width: 50%;
	min-height: 100px;
	text-align: center;
}

.entry .pagination-previous:hover {
	background: #f8f8f8;
	-webkit-transition: 0.3s linear all;
	-moz-transition: 0.3s linear all;
	-ms-transition: 0.3s linear all;
	-o-transition: 0.3s linear all;
	transition: 0.3s linear all;
}

.entry .pagination-next:before {
	content: 'NEXT STORY';
	text-align: center;
	width: 100%;
	color: #999;
	font-size: 12px;
	font-size: 1.2rem;
	display: block;
	padding-bottom: 10px;
}

.entry .pagination-next {
	padding: 10px 10px 10px 5px;
	width: 50%;
	min-height: 100px;
	text-align: center;
}

.entry .pagination-next:hover {
	background: #f8f8f8;
	-webkit-transition: 0.3s linear all;
	-moz-transition: 0.3s linear all;
	-ms-transition: 0.3s linear all;
	-o-transition: 0.3s linear all;
	transition: 0.3s linear all;
}



/* Comments
--------------------------------------------- */

#respond {
	margin-top: 20px;
	padding: 20px;
	padding: 2rem;
}

.comment-respond,
.entry-comments,
.entry-pings {
	background-color: #fff;
	margin-bottom: 20px;
	margin-bottom: 2rem;
}

.entry-comments {
	padding: 20px;
	padding: 2rem;
}

.comment-respond,
.entry-pings {
	padding: 40px 40px 16px;
	padding: 4rem 4rem 1.6rem;
}

.comment-respond a,
.entry-comments a {

}

.comment-content,
.comment-reply {
	clear: both;
	margin: 0 56px;
	margin: 0 5.6rem;
}

.entry-comments .comment-author {
	margin-bottom: 0;
}

.comment-respond input[type="email"],
.comment-respond input[type="text"],
.comment-respond input[type="url"] {
	width: 50%
}

.comment-respond label {
	display: block;
	margin-right: 12px;
	margin-right: 1.2rem;
}

.comment-list li,
.ping-list li {
	list-style-type: none;
}

.comment-list li {
	margin-top: 24px;
	margin-top: 2.4rem;
}

.comment-list li li {
	margin-right: -32px;
	margin-right: -3.2rem;
}

li.comment {

}

.comment .avatar {
	margin: 0 16px 24px 0;
	margin: 0 1.6rem 2.4rem 0;
}

.entry-pings .reply {
	display: none;
}

.bypostauthor {
}

.form-allowed-tags {
	background-color: #f5f5f5;
	font-size: 14px;
	font-size: 1.4rem;
	padding: 24px;
	padding: 2.4rem;
}

.children {
	border-top: 1px solid #ddd;
	margin-left: 56px;
	margin-left: 5.6rem;
	margin-top: 32px;
	margin-top: 3.2rem;
	position: relative;
	overflow: hidden;
}

.children li:last-child {
	border-bottom: none !important;
}

.comment-header a,
.comment-respond a, 
.entry-comments a {
	text-transform: uppercase;
	font-size: 12px;
	font-size: 1.2rem;
}

.comment-author {
	padding-top: 6px;
	padding-top: 0.6rem;
}

.comment-author cite {
	font-style: normal;
}

.comment-author .says {
	display: none;
}

.comment-author,
.comment-meta {
	line-height: 1.2;
}

.comment-reply-link {
	background: #f5f5f5;
	padding: 10px;
	padding: 0.5rem 1rem;
	border: none;
	color: #999;
}

/*
Sidebars
---------------------------------------------------------------------------------------------------- */

.sidebar {
	color: #999;
	border: 5px solid #e5e5e5;
}

.sidebar a {
	border-bottom: 1px solid #ddd;
}

.sidebar p:last-child {
	margin-bottom: 0;
}

.sidebar li {
	list-style-type: none;
	margin-bottom: 6px;
	margin-bottom: 0.6rem;
	word-wrap: break-word;
}

.sidebar ul > li:last-child {
	margin-bottom: 0;
}

.sidebar .widget {
	background-color: #fff;
	border-radius: 3px;
	padding: 20px;
	padding: 2rem;
}

.sidebar .enews-widget {
	background-color: #333;
}
/* ... */

